k8s-services/backend/todolist-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todolist-api-deployment
  labels:
    app: todolist-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: todolist-api
  template:
    metadata:
      labels:
        app: todolist-api
    spec:
      containers:
      - name: todolist-backend
        image: yanghoo/todolist-backend:latest
        ports:
        - containerPort: 2333
