k8s-services/backend/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  labels:
    app: api-service
spec:
  type: ClusterIP 
  ports:
    - targetPort: 2333
      port: 23333 
  selector:
    app: todolist-api
